--- a/flex/05-flex-modal/index.html
+++ b/flex/05-flex-modal/index.html
@@ -9,12 +9,21 @@
   </head>
   <body>
     <div class="modal">
+
+      <div class="top">
       <div class="icon">!</div>
-      <div class="header">Are you sure you want to do that?</div>
+      <div class="header"><h2>Are you sure you want to do that?</h2></div>
       <div class="close-button">✖</div>
+      </div>
+      <div class="bottom">
       <div class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur excepturi id soluta, numquam minima rerum doloremque eveniet aspernatur beatae commodi. Cupiditate recusandae ad repellendus quidem consectetur sequi amet aspernatur cumque!</div>
+    </div>
+
+    <div class="buttons">
       <button class="continue">Continue</button>
       <button class="cancel">Cancel</button>
+    </div>
+      
     </div>
   </body>
 </html>
